# tree-sitter-ignis

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  binding.gyp  bnf.md  grammar.js  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  setup.py  shell.nix  tree-sitter-ignis.pc  tree-sitter-ignis.was  tree-sitter.json
bindings/c/: tree-sitter-ignis.h  tree-sitter-ignis.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc  index.js
bindings/rust/: lib.rs
queries/: highlights.scm  indent.scm
src/: grammar.json  node-types.json  parser.c
test/: test.ign
test/corpus/: atom.txt  class.txt  comment.txt  const.txt  control_flow.txt  decalre.txt  declare.txt  decorator.txt  enum.txt  extern.txt  function.txt  implements.txt  import.txt  interface.txt  literals.txt  loop.txt  match.txt  meta.txt  namespace.txt  pipe.txt  range.txt  record.txt  tuple.txt  type.txt  unary.txt  variable.txt
