[package]
name = "tree-sitter-ignis"
description = "ignis grammar for the tree-sitter parsing library"
license = "MIT"
version = "0.0.1"
keywords = ["incremental", "parsing", "ignis"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-ignis"
edition = "2018"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20.10"

[build-dependencies]
cc = "1.0"
